add return to top to the 3 ingredients htmls

--- a/recipes/cauliflower-fried-rice.html
+++ b/recipes/cauliflower-fried-rice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
     <head>
         <meta charset="utf-8">
         <title>Cauliflower Fried Rice</title>
@@ -47,6 +47,7 @@
 
         
         <p><a href="https://www.eatwell101.com/cauliflower-fried-rice-skillet-recipe">Reference Webpage and Image Location</a></p>
+        <p><a href="#header">Return to Top</a></p>
         <p><a href="../index.html">Return to Homepage</a></p>
         
     </body>
