--- a/recipes/baked-chicken-wings.html
+++ b/recipes/baked-chicken-wings.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Baked Chicken Wings</title>
-
+        <link rel="stylesheet" href="../styles.css">
 
     </head>
     <body>
