--- a/recipes/cauliflower-fried-rice.html
+++ b/recipes/cauliflower-fried-rice.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Cauliflower Fried Rice</title>
-
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Cauliflower fried rice
