--- a/recipes/cooked-ground-beef.html
+++ b/recipes/cooked-ground-beef.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Cooked Ground Beef</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Cooked Ground Beef</h1>
